# scherzo

./: .gitattributes  .gitignore  AUTHORS.md  README.md  autogen  cabal.project  fourmolu.yaml  module-header-template  precabal  scherzo.cabal
cabal/: common.inc  package.bounds  prologue.inc
core/: ChangeLog.md  scherzo-core.cabal  scherzo-core.cabal.in
core/src/Scherzo/Music/: Elementary.hs  Expr.hs
lib/Alma/: Parser.hs  Syntax.hs
lib/Alma/Parser/: CharTrie.hs  Config.hs  Music.hs  Rules.hs  TrieLexer.hs  Type.hs
lib/Alma/Syntax/: Config.hs
lib/Scherzo/: Music.hs
lilypond/: ChangeLog.md  scherzo-lilypond.cabal  scherzo-lilypond.cabal.in
lilypond/ly/: sexp-export-init.ly  sexp-export.scm
lilypond/src/Scherzo/Format/LilyPond/: Guile.hs  Reader.hs  Writer.hs
lilypond/src/Scherzo/Format/LilyPond/Reader/: Datum.hs  Parser.hs
lilypond/src/ly2sch/: main.hs
prelude/: Prelude.hs  scherzo-prelude.cabal  scherzo-prelude.cabal.in
scherzo-core/: scherzo-core.cabal
scherzo-core/src/Scherzo/Music/: Elementary.hs  Expr.hs
src/alma2ly/: Main.hs
