cabal-version: 3.0
name: scherzo-lilypond
version: 0.1.0.0
synopsis: LilyPond format support for Scherzo
description:
    Scherzo is a set of tools for working with Western classical music notation.

    This package provide a library for importing and exporting music to/from Scherzo in LilyPond format.

    GNU LilyPond is a free music type setting program.
homepage: https://github.com/Merivuokko/scherzo
license: GPL-3.0-only
license-file: LICENSE
author: Aura Kelloniemi
maintainer: kaura.dev@sange.fi
copyright: Copyright 2023 Aura Kelloniemi
tested-with: GHC == { 9.4.4 }

source-repository head
    type: git
    location: https://github.com/Merivuokko/scherzo
    subdir: lilypond
                      
flag Werror
    description: Enable -Werror for fixing all warnings
    default: False
    manual: True

flag Weverything
    description: Enable almost every possible warning
    default: False
    manual: True

common general
    build-depends:
        base ^>={ 4.16, 4.17, 4.18 },
        scherzo-core ^>=0.1.0,
        text ^>=2.0

    default-extensions:
        BlockArguments,
        DataKinds,
        DeriveAnyClass,
        DeriveGeneric,
        DerivingStrategies,
        DuplicateRecordFields,
        LambdaCase,
        NoFieldSelectors,
        NoStarIsType,
        OverloadedRecordDot,
        OverloadedStrings,
        QuasiQuotes,
        StrictData,
        TypeFamilies
    default-language: GHC2021
    ghc-options:
        -fshow-warning-groups

    if flag(Werror)
        ghc-options:
            -Werror

    if flag(Weverything)
        ghc-options:
            -Weverything
            -Wno-all-missed-specialisations
            -Wno-implicit-prelude
            -Wno-missed-specialisations
            -Wno-missing-import-lists
            -Wno-missing-kind-signatures
            -Wno-missing-safe-haskell-mode
            -Wno-monomorphism-restriction
            -Wno-safe
            -Wno-unsafe
            -Wno-unticked-promoted-constructors
    else
        ghc-options: -Wall -Wcompat

library
    import: general
    build-depends:
        containers ^>=0.6,
        file-io ^>=0.1.0,
        filepath ^>=1.4.100,
        hashable ^>=1.4,
        megaparsec ^>= 9.3.0
    exposed-modules:
        Scherzo.Format.LilyPond.Reader
    hs-source-dirs: src

test-suite scherzo-lilypond
    import: general
    build-depends:
        scherzo-core,
        shcerzo-lilypond
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
