cabal-version: 3.0
name: scherzo-core
version: 0.1.0.0
synopsis: Music notation toolbox
description:
    Scherzo is a set of tools for working with Western classical music notation.

    The plan is to support translating music between different music notation formats and to render notation as audio.

    This package provides the core library used by all subpackages.
homepage: https://github.com/Merivuokko/scherzo
license: GPL-3.0-only
license-file: LICENSE
author: Aura Kelloniemi
maintainer: kaura.dev@sange.fi
copyright: Copyright 2023 Aura Kelloniemi
tested-with: GHC == { 9.4.4 }

source-repository head
    type: git
    location: https://github.com/Merivuokko/scherzo
    subdir: scherzo-core
                      
flag Werror
    description: Enable -Werror for fixing all warnings
    default: False
    manual: True

flag Weverything
    description: Enable almost every possible warning
    default: False
    manual: True

common general
    build-depends:
        base ^>={ 4.16, 4.17, 4.18 },
        text ^>=2.0

    default-extensions:
        BlockArguments,
        DataKinds,
        DeriveAnyClass,
        DeriveGeneric,
        DerivingStrategies,
        DuplicateRecordFields,
        LambdaCase,
        NoFieldSelectors,
        NoStarIsType,
        OverloadedRecordDot,
        OverloadedStrings,
        QuasiQuotes,
        StrictData,
        TypeFamilies
    default-language: GHC2021
    ghc-options:
        -fshow-warning-groups

    if flag(Werror)
        ghc-options:
            -Werror

    if flag(Weverything)
        ghc-options:
            -Weverything
            -Wno-all-missed-specialisations
            -Wno-implicit-prelude
            -Wno-missed-specialisations
            -Wno-missing-import-lists
            -Wno-missing-kind-signatures
            -Wno-missing-safe-haskell-mode
            -Wno-monomorphism-restriction
            -Wno-safe
            -Wno-unsafe
            -Wno-unticked-promoted-constructors
    else
        ghc-options: -Wall -Wcompat

library
    import: general
    build-depends:
        containers ^>=0.6,
        hashable ^>=1.4,
        numeric-logarithms ^>=0.1
    exposed-modules:
    hs-source-dirs: src
